# memory-cli

./: .gitignore  memories.db  pyproject.toml
src/: test_mem_final.py  test_memory.py  test_relationships.py
src/memory_server/: server.py
tests/: conftest.py  test_basic.py  test_graph.py  test_sessions.py
