[project]
name = "memory-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "pydantic>=2.13.2",
    "sqlite-utils>=3.39",
]

[project.scripts]
memory-server = "memory_server.server:mcp.run"

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


